--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,33 +1,729 @@
-a{
-    text-decoration: none; 
-}
-body{
-    width: auto;
-    color: #8d96bd;
-}
+$var1: #8d96bd;
+$var2: #FFFFFF;
+$var3: #697CA6;
+$var4: #E6E6E6;
+$var5: #B6BAC7;
+$var6: #6188FF;
+$var7: #757E9A;
+$var8: #3A79FF;
+$var9: #D2E1FF;
+$var10: #5E81FE;
+$var11: #FFFFFF;
+$var12: #000000;
+$var13: #D8E3FE;
+$var14: #3d4f9f;
+$var15: #3D4F9F;
+$var16: #5E81FF;
+$var17: #5F82FF;
+$var18: #F5F8FF;
+$var19: #4C85FF;
+$var20: #ADB4D2;
+$var21: #D1D1E4;
+$var22: #F1F5FF;
+$var23: #4074F8;
+$var24: #ADB3CB;
+$var25: #FFD7D7;
+$var26: #D43F3F;
+$var27: #5E80FF;
+$var28: #EFF4FF;
 
-header{
-    position: sticky;
-    top: 0;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #FFFFFF;
-    z-index: 10;
+a {
+	text-decoration: none;
+}
+body {
+	width: auto;
+	color: $var1;
+}
+header {
+	position: sticky;
+	top: 0;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: $var2;
+	z-index: 10;
 }
 .container {
-    width: 1200px;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
+	width: 1200px;
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0 15px;
 }
-
-
-.headerContent{
-    display: flex;
-    align-items: center;
-    justify-content: space-around; 
-    min-width: 330px;
+.headerContent {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	min-width: 330px;
+	label {
+		flex-grow: 1;
+	}
+	label {
+		flex-grow: 0;
+	}
 }
-
+.header-logo {
+	display: inline-flex;
+	margin: 0 20px;
+}
+.menu {
+	display: flex;
+	flex-grow: 1;
+	justify-content: start;
+	align-items: center;
+	font-family: Quicksand;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 15px;
+	color: $var3;
+}
+.headerButton {
+	font-size: 12px;
+	line-height: 15px;
+	text-shadow: 0px 0px 5px $var4;
+	margin: 21px;
+}
+.socialMedia {
+	display: inline-flex;
+}
+.fab {
+	padding: 5px;
+	margin: 10px;
+}
+.fa-facebook-f {
+	color: $var5;
+}
+.fa-twitter {
+	color: $var6;
+}
+.fa-telegram-plane {
+	color: $var5;
+}
+.fa-medium-m {
+	color: $var7;
+}
+.getStarted {
+	font-family: Quicksand;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 13px;
+	line-height: 16px;
+	padding: 16px 20px;
+	border-radius: 2px;
+	color: $var8;
+	background: $var9;
+	display: inline-flex;
+}
+#buttonHome {
+	font-family: Quicksand;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 15px;
+	letter-spacing: 0.05em;
+	text-transform: capitalize;
+	text-shadow: 0px 0px 5px $var4;
+	color: $var10;
+}
+#menu-button {
+	display: none;
+}
+media screen and (max-width: 768px) {
+	height: 80px;
+}
+.headerContent {
+	display: flex;
+	justify-content: center;
+}
+label .menu-button {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	z-index: 20;
+	width: 80px;
+	height: 80px;
+	background: $var11;
+	border-radius: 50% 50% 50% 50%;
+	-webkit-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	box-shadow: 0 0 0 0 $var11, 0 0 0 0 #FFF;
+	cursor: pointer;
+}
+label .hamburger {
+	position: absolute;
+	top: 40px;
+	left: 20px;
+	width: 30px;
+	height: 2px;
+	background: $var12;
+	display: block;
+	-webkit-transform-origin: center;
+	transform-origin: center;
+	-webkit-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	&:after, &:before {
+		-webkit-transition: .5s ease-in-out;
+		transition: .5s ease-in-out;
+		content: "";
+		position: absolute;
+		display: block;
+		width: 100%;
+		height: 100%;
+		background: $var12;
+	}
+	&:before {
+		top: -10px;
+	}
+	&:after {
+		bottom: -10px;
+	}
+}
+label input {
+	display: none;
+	&:checked + .menu-button {
+		box-shadow: 0 0 0 100vw $var11, 0 0 0 100vh #FFF;
+		border-radius: 0;
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		.hamburger {
+			-webkit-transform: rotate(45deg);
+			transform: rotate(45deg);
+			&:after {
+				-webkit-transform: rotate(90deg);
+				transform: rotate(90deg);
+				bottom: 0;
+			}
+			&:before {
+				-webkit-transform: rotate(90deg);
+				transform: rotate(90deg);
+				top: 0;
+			}
+		}
+		+ .menu {
+			opacity: 1;
+			pointer-events: auto;
+		}
+	}
+	&:checked + label .menu {
+		pointer-events: auto;
+	}
+}
+label .menu {
+	display: block;
+	z-index: 25;
+	position: absolute;
+	left: 45%;
+	opacity: 0;
+	pointer-events: none;
+}
+label .headerButton {
+	margin-bottom: 1em;
+	display: block;
+	color: $var12;
+	text-decoration: none;
+}
+.headerButton {
+	text-align: center;
+	width: 100%;
+	margin: 0px;
+	padding: 10px;
+	border: 1px solid black;
+}
+.socialMedia {
+	display: none;
+}
+.header-logo {
+	flex-grow: 1;
+	margin-left: 100px;
+}
+.main-slider {
+	height: 570px;
+	border-top: 1px solid $var13;
+	background: linear-gradient(180deg, #F4F7FF 0%, $var22 100%);
+}
+.main-slide {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	background-size: cover;
+	background-position: center;
+	&-content {
+		max-width: 613px;
+		padding: 0 15px;
+		text-align: center;
+		margin: 90px 0 0;
+		p {
+			font-family: 'Roboto';
+			font-size: 15px;
+			line-height: 29px;
+			letter-spacing: 0.03em;
+			max-width: 500px;
+			margin: 0 auto 10px;
+		}
+	}
+}
+.page-1-str-1 {
+	font-family: 'Roboto';
+	font-weight: 500;
+	font-size: 10px;
+	letter-spacing: 0.1em;
+	text-transform: uppercase;
+	color: $var14;
+	margin: 0 0 16px;
+}
+.page-1-str-2 {
+	font-family: 'Quicksand';
+	font-weight: 300;
+	font-size: 48px;
+	line-height: 60px;
+	color: $var15;
+	margin: 0 0 20px;
+	strong {
+		font-weight: 500;
+	}
+}
+.button-play {
+	background: $var2;
+	padding: 14px 16px 13px 17.25px;
+	border-radius: 50%;
+	line-height: 70px;
+	text-align: center;
+}
+i.fas {
+	padding: 0;
+}
+.fa-play {
+	padding: 0;
+}
+.play_1 {
+	color: $var16;
+}
+.sponsor {
+	height: 145px;
+	background: $var2;
+	border-top: 1px solid $var13;
+	border-bottom: 1px solid $var13;
+	display: flex;
+	&__content-slide > input {
+		display: none;
+	}
+	&__content-slide {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		min-width: 260px;
+		.sponsor__content-control {
+			position: absolute;
+			top: 100px;
+		}
+		label {
+			cursor: pointer;
+			display: inline-block;
+			height: 8px;
+			margin: 10px;
+			position: relative;
+			width: 8px;
+			border-radius: 20%;
+			&:after {
+				border: 2px solid $var17;
+				content: " ";
+				display: block;
+				height: 16px;
+				left: -4px;
+				position: absolute;
+				top: -4px;
+				width: 16px;
+				border-radius: 20%;
+			}
+		}
+	}
+	&__content_slides {
+		display: flex;
+		justify-content: space-around;
+		flex-grow: 1;
+	}
+	&__content-slide {
+		position: relative;
+	}
+	&__content_slides {
+		position: absolute;
+		top: 50px;
+	}
+	&__content-sliders {
+		height: inherit;
+		opacity: 0;
+		position: absolute;
+		width: inherit;
+		z-index: 0;
+	}
+}
+media screen and (max-width: 768px) {
+	height: 145px;
+}
+#point1:checked ~ .sponsor__content-control label:nth-of-type(1), #point2:checked ~ .sponsor__content-control label:nth-of-type(2), #point3:checked ~ .sponsor__content-control label:nth-of-type(3), #point4:checked ~ .sponsor__content-control label:nth-of-type(4), #point5:checked ~ .sponsor__content-control label:nth-of-type(5) {
+	background: $var17;
+}
+#point1:checked ~ .sponsor__content_slides > #sponsor__content_slide-1, #point2:checked ~ .sponsor__content_slides > #sponsor__content_slide-2, #point3:checked ~ .sponsor__content_slides > #sponsor__content_slide-3, #point4:checked ~ .sponsor__content_slides > #sponsor__content_slide-4, #point5:checked ~ .sponsor__content_slides > #sponsor__content_slide-5 {
+	opacity: 1;
+	z-index: 1;
+}
+.planAndManage {
+	height: 776px;
+	background: $var18;
+}
+.plan-and-manage__content {
+	height: 776px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.page-2-1 {
+	display: flex;
+	flex-direction: column;
+	margin-left: 150px;
+}
+.page-2-2 {
+	flex-grow: 1;
+}
+.group-button {
+	margin-top: 47px;
+}
+.page-2-button-1 {
+	width: 130px;
+	font-family: 'Quicksand';
+	font-style: normal;
+	font-weight: bold;
+	font-size: 13px;
+	line-height: 16px;
+	border-radius: 2px;
+	padding: 13px 25px;
+	color: $var2;
+	background: $var19;
+	display: inline-flex;
+	background: $var19;
+	box-shadow: 0px 5px 15px rgba(188, 199, 255, 0.75);
+	border-radius: 2px;
+}
+.page-2-button-2 {
+	width: 130px;
+	font-family: 'Quicksand';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 16px;
+	padding: 13px 21px;
+	border-radius: 2px;
+	color: $var20;
+	font-style: normal;
+	align-items: center;
+	text-align: center;
+	background: $var18;
+	display: inline-flex;
+	border: 1px solid $var21;
+	box-sizing: border-box;
+}
+.play_2 {
+	color: $var2;
+	padding: 0 6px;
+}
+media screen and (max-width: 768px) {
+	flex-direction: column;
+}
+.page-2-1 {
+	margin: 30px 60px;
+}
+.group-button {
+	display: flex;
+	justify-content: center;
+}
+.page-2-button-1 {
+	margin-right: 10px;
+}
+.page-1-str-1 {
+	text-align: center;
+}
+.page-1-str-2 {
+	text-align: center;
+}
+media screen and (max-width: 880px) {
+	margin-left: 0;
+}
+media screen and (max-width: 600px) {
+	display: none;
+}
+.page-2-1 {
+	margin: unset;
+}
+media screen and (max-width: 430px) {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.page-2-button-1 {
+	margin-bottom: 10px;
+	margin-right: 0;
+}
+.page__3 {
+	height: 885px;
+	border-top: 1px solid $var13;
+	border-bottom: 1px solid $var13;
+	&_container {
+		margin-top: 141px;
+		margin-bottom: 171px;
+		display: flex;
+		justify-content: center;
+		background-size: cover;
+		background-position: center;
+	}
+	&-content {
+		height: 573px;
+		display: flex;
+		flex-direction: column;
+	}
+	&-str-1 {
+		margin-top: 30px;
+		color: $var15;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 10px;
+		line-height: 12px;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		text-align: center;
+	}
+	&-str-2 {
+		margin-top: 20px;
+		color: $var15;
+		font-family: Quicksand;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 24px;
+		line-height: 30px;
+		text-align: center;
+	}
+	&-features {
+		margin-top: 92px;
+		display: flex;
+		align-items: stretch;
+		justify-content: center;
+	}
+	&-icon {
+		width: 140px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	&-text-1 {
+		margin-top: 33px;
+		font-family: Open Sans;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 25px;
+		text-align: center;
+		color: $var23;
+	}
+	&-text-2 {
+		margin-top: 25px;
+		font-family: Open Sans;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 11px;
+		line-height: 19px;
+		text-align: center;
+		color: $var24;
+	}
+	&-buttons {
+		width: 337px;
+		align-self: center;
+		margin-top: 90px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	&-text-3 {
+		font-family: Open Sans;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 11px;
+		line-height: 19px;
+		color: $var24;
+	}
+	&-slider__wrapper > input {
+		display: none;
+	}
+	&-slider__items {
+		position: absolute;
+		top: 92px;
+	}
+	&-icon {
+		left: -70px;
+	}
+	&-buttons {
+		margin-top: 450px;
+	}
+	&-features {
+		margin-top: unset;
+		display: unset;
+	}
+	&-slider__item {
+		height: 254px;
+		width: 140px;
+		opacity: 0;
+		position: absolute;
+		z-index: 0;
+	}
+	&-slider__wrapper .page__3-control {
+		position: absolute;
+		top: 350px;
+	}
+	&-slider__wrapper label {
+		cursor: pointer;
+		display: inline-block;
+		height: 8px;
+		margin: 10px;
+		position: relative;
+		width: 8px;
+		border-radius: 20%;
+		&:after {
+			border: 2px solid $var17;
+			content: " ";
+			display: block;
+			height: 16px;
+			left: -4px;
+			position: absolute;
+			top: -4px;
+			width: 16px;
+			border-radius: 20%;
+		}
+	}
+}
+#page_3-circle {
+	width: 69px;
+	height: 69px;
+	background: $var22;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+#button_red {
+	background: $var25;
+	color: $var26;
+	padding: 16px 22px;
+}
+media screen and (max-width: 768px) {
+	display: none;
+}
+media screen and (max-width: 600px) {
+	position: relative;
+	display: flex;
+	justify-content: center;
+}
+#page__3-point1:checked ~ .page__3-control label:nth-of-type(1), #page__3-point2:checked ~ .page__3-control label:nth-of-type(2), #page__3-point3:checked ~ .page__3-control label:nth-of-type(3), #page__3-point4:checked ~ .page__3-control label:nth-of-type(4) {
+	background: $var17;
+}
+#page__3-point1:checked ~ .page__3-slider__items > #page__3-slider__item-1, #page__3-point2:checked ~ .page__3-slider__items > #page__3-slider__item-2, #page__3-point3:checked ~ .page__3-slider__items > #page__3-slider__item-3, #page__3-point4:checked ~ .page__3-slider__items > #page__3-slider__item-4 {
+	opacity: 1;
+	z-index: 1;
+}
+.page__4 {
+	height: 343px;
+	border-top: 1px solid $var13;
+	border-bottom: 1px solid $var13;
+	display: flex;
+	justify-content: space-between;
+	&-left {
+		width: 50%;
+		background: linear-gradient(229.32deg, #6888FF 12.77%, $var27 73.11%);
+		color: $var2;
+		padding-right: 90px;
+		padding-top: 66px;
+		padding-bottom: 66px;
+		text-align: right;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: flex-end;
+	}
+	&-right {
+		width: 50%;
+		background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
+		color: $var27;
+		padding-left: 90px;
+		padding-top: 66px;
+		padding-bottom: 66px;
+		text-align: left;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: flex-start;
+	}
+	&-text-1 {
+		font-family: Quicksand;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 48px;
+		line-height: 83px;
+		letter-spacing: 0.03em;
+	}
+	&-text-2 {
+		width: 260px;
+		height: 45px;
+		font-family: Quicksand;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 18px;
+		line-height: 23px;
+		letter-spacing: 0.03em;
+	}
+	&-left {
+		padding-right: 20px;
+	}
+	&-text-2 {
+		width: unset;
+	}
+}
+media screen and (max-width: 768px) {
+	padding-left: 20px;
+}
+.page__5 {
+	height: 865px;
+	background: $var18;
+	display: flex;
+	&_container {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&_content {
+		display: flex;
+		flex-direction: column;
+	}
+	&-slider {
+		margin-top: 92px;
+	}
+	&-slide1 {
+		width: 958px;
+		height: 394px;
+		background: $var2;
+		border: 1px solid $var13;
+		box-sizing: border-box;
+		box-shadow: 0px 15px 50px $var28;
+	}
+	&-slide2 {
+		background-color: red;
+	}
+	&-slide3 {
+		background-color: green;
+	}
+}
