--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -129,119 +129,124 @@ header {
 #menu-button {
 	display: none;
 }
-media screen and (max-width: 768px) {
-	height: 80px;
-}
-.headerContent {
-	display: flex;
-	justify-content: center;
-}
-label .menu-button {
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	z-index: 20;
-	width: 80px;
-	height: 80px;
-	background: $var11;
-	border-radius: 50% 50% 50% 50%;
-	-webkit-transition: .5s ease-in-out;
-	transition: .5s ease-in-out;
-	box-shadow: 0 0 0 0 $var11, 0 0 0 0 #FFF;
-	cursor: pointer;
-}
-label .hamburger {
-	position: absolute;
-	top: 40px;
-	left: 20px;
-	width: 30px;
-	height: 2px;
-	background: $var12;
-	display: block;
-	-webkit-transform-origin: center;
-	transform-origin: center;
-	-webkit-transition: .5s ease-in-out;
-	transition: .5s ease-in-out;
-	&:after, &:before {
+@media screen and (max-width: 768px) {
+	header{
+        height: 80px;
+	}
+	
+	.headerContent {
+		display: flex;
+		justify-content: center;
+	}
+	label .menu-button {
+		position: absolute;
+		left: 0px;
+		top: 0px;
+		z-index: 20;
+		width: 80px;
+		height: 80px;
+		background: $var11;
+		border-radius: 50% 50% 50% 50%;
 		-webkit-transition: .5s ease-in-out;
 		transition: .5s ease-in-out;
-		content: "";
+		box-shadow: 0 0 0 0 $var11, 0 0 0 0 #FFF;
+		cursor: pointer;
+	}
+	label .hamburger {
 		position: absolute;
-		display: block;
-		width: 100%;
-		height: 100%;
+		top: 40px;
+		left: 20px;
+		width: 30px;
+		height: 2px;
 		background: $var12;
+		display: block;
+		-webkit-transform-origin: center;
+		transform-origin: center;
+		-webkit-transition: .5s ease-in-out;
+		transition: .5s ease-in-out;
+		&:after, &:before {
+			-webkit-transition: .5s ease-in-out;
+			transition: .5s ease-in-out;
+			content: "";
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+			background: $var12;
+		}
+		&:before {
+			top: -10px;
+		}
+		&:after {
+			bottom: -10px;
+		}
 	}
-	&:before {
-		top: -10px;
-	}
-	&:after {
-		bottom: -10px;
-	}
-}
-label input {
-	display: none;
-	&:checked + .menu-button {
-		box-shadow: 0 0 0 100vw $var11, 0 0 0 100vh #FFF;
-		border-radius: 0;
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		width: 100vw;
-		height: 100vh;
-		.hamburger {
-			-webkit-transform: rotate(45deg);
-			transform: rotate(45deg);
-			&:after {
-				-webkit-transform: rotate(90deg);
-				transform: rotate(90deg);
-				bottom: 0;
+	label input {
+		display: none;
+		&:checked + .menu-button {
+			box-shadow: 0 0 0 100vw $var11, 0 0 0 100vh #FFF;
+			border-radius: 0;
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			width: 100vw;
+			height: 100vh;
+			.hamburger {
+				-webkit-transform: rotate(45deg);
+				transform: rotate(45deg);
+				&:after {
+					-webkit-transform: rotate(90deg);
+					transform: rotate(90deg);
+					bottom: 0;
+				}
+				&:before {
+					-webkit-transform: rotate(90deg);
+					transform: rotate(90deg);
+					top: 0;
+				}
 			}
-			&:before {
-				-webkit-transform: rotate(90deg);
-				transform: rotate(90deg);
-				top: 0;
+			+ .menu {
+				opacity: 1;
+				pointer-events: auto;
 			}
 		}
-		+ .menu {
-			opacity: 1;
+		&:checked + label .menu {
 			pointer-events: auto;
 		}
 	}
-	&:checked + label .menu {
-		pointer-events: auto;
+	label .menu {
+		display: block;
+		z-index: 25;
+		position: absolute;
+		left: 45%;
+		opacity: 0;
+		pointer-events: none;
 	}
+	label .headerButton {
+		margin-bottom: 1em;
+		display: block;
+		color: $var12;
+		text-decoration: none;
+	}
+	.headerButton {
+		text-align: center;
+		width: 100%;
+		margin: 0px;
+		padding: 10px;
+		border: 1px solid black;
+	}
+	.socialMedia {
+		display: none;
+	}
+	.header-logo {
+		flex-grow: 1;
+		margin-left: 100px;
+	}
+	
 }
-label .menu {
-	display: block;
-	z-index: 25;
-	position: absolute;
-	left: 45%;
-	opacity: 0;
-	pointer-events: none;
-}
-label .headerButton {
-	margin-bottom: 1em;
-	display: block;
-	color: $var12;
-	text-decoration: none;
-}
-.headerButton {
-	text-align: center;
-	width: 100%;
-	margin: 0px;
-	padding: 10px;
-	border: 1px solid black;
-}
-.socialMedia {
-	display: none;
-}
-.header-logo {
-	flex-grow: 1;
-	margin-left: 100px;
-}
+
 .main-slider {
 	height: 570px;
 	border-top: 1px solid $var13;
@@ -363,7 +368,7 @@ i.fas {
 		z-index: 0;
 	}
 }
-media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 	height: 145px;
 }
 #point1:checked ~ .sponsor__content-control label:nth-of-type(1), #point2:checked ~ .sponsor__content-control label:nth-of-type(2), #point3:checked ~ .sponsor__content-control label:nth-of-type(3), #point4:checked ~ .sponsor__content-control label:nth-of-type(4), #point5:checked ~ .sponsor__content-control label:nth-of-type(5) {
@@ -432,7 +437,7 @@ media screen and (max-width: 768px) {
 	color: $var2;
 	padding: 0 6px;
 }
-media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 	flex-direction: column;
 }
 .page-2-1 {
@@ -451,16 +456,16 @@ media screen and (max-width: 768px) {
 .page-1-str-2 {
 	text-align: center;
 }
-media screen and (max-width: 880px) {
+@media screen and (max-width: 880px) {
 	margin-left: 0;
 }
-media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
 	display: none;
 }
 .page-2-1 {
 	margin: unset;
 }
-media screen and (max-width: 430px) {
+@media screen and (max-width: 430px) {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -621,10 +626,10 @@ media screen and (max-width: 430px) {
 	color: $var26;
 	padding: 16px 22px;
 }
-media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 	display: none;
 }
-media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -693,7 +698,7 @@ media screen and (max-width: 600px) {
 		width: unset;
 	}
 }
-media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 	padding-left: 20px;
 }
 .page__5 {
