--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -8,24 +8,21 @@ $var7: #757E9A;
 $var8: #3A79FF;
 $var9: #D2E1FF;
 $var10: #5E81FE;
-$var11: #FFFFFF;
-$var12: #000000;
-$var13: #D8E3FE;
-$var14: #3d4f9f;
-$var15: #3D4F9F;
-$var16: #5E81FF;
-$var17: #5F82FF;
-$var18: #F5F8FF;
-$var19: #4C85FF;
-$var20: #ADB4D2;
-$var21: #D1D1E4;
-$var22: #F1F5FF;
-$var23: #4074F8;
-$var24: #ADB3CB;
-$var25: #FFD7D7;
-$var26: #D43F3F;
-$var27: #5E80FF;
-$var28: #EFF4FF;
+$var11: #000000;
+$var12: #D8E3FE;
+$var13: #3d4f9f;
+$var14: #5F82FF;
+$var15: #F5F8FF;
+$var16: #4C85FF;
+$var17: #ADB4D2;
+$var18: #D1D1E4;
+$var19: #F1F5FF;
+$var20: #4074F8;
+$var21: #ADB3CB;
+$var22: #FFD7D7;
+$var23: #D43F3F;
+$var24: #5E80FF;
+$var25: #EFF4FF;
 
 a {
 	text-decoration: none;
@@ -57,9 +54,6 @@ header {
 	min-width: 330px;
 	label {
 		flex-grow: 1;
-	}
-	label {
-		flex-grow: 0;
 	}
 }
 .header-logo {
@@ -129,14 +123,18 @@ header {
 #menu-button {
 	display: none;
 }
+
 @media screen and (max-width: 768px) {
-	header{
-        height: 80px;
-	}
 	
+	header {
+		height: 80px;
+	}
 	.headerContent {
 		display: flex;
 		justify-content: center;
+		label {
+			flex-grow: 0;
+		}
 	}
 	label .menu-button {
 		position: absolute;
@@ -145,11 +143,11 @@ header {
 		z-index: 20;
 		width: 80px;
 		height: 80px;
-		background: $var11;
+		background: $var2;
 		border-radius: 50% 50% 50% 50%;
 		-webkit-transition: .5s ease-in-out;
 		transition: .5s ease-in-out;
-		box-shadow: 0 0 0 0 $var11, 0 0 0 0 #FFF;
+		box-shadow: 0 0 0 0 $var2, 0 0 0 0 #FFF;
 		cursor: pointer;
 	}
 	label .hamburger {
@@ -158,7 +156,7 @@ header {
 		left: 20px;
 		width: 30px;
 		height: 2px;
-		background: $var12;
+		background: $var11;
 		display: block;
 		-webkit-transform-origin: center;
 		transform-origin: center;
@@ -172,7 +170,7 @@ header {
 			display: block;
 			width: 100%;
 			height: 100%;
-			background: $var12;
+			background: $var11;
 		}
 		&:before {
 			top: -10px;
@@ -184,7 +182,7 @@ header {
 	label input {
 		display: none;
 		&:checked + .menu-button {
-			box-shadow: 0 0 0 100vw $var11, 0 0 0 100vh #FFF;
+			box-shadow: 0 0 0 100vw $var2, 0 0 0 100vh #FFF;
 			border-radius: 0;
 			position: absolute;
 			top: 0;
@@ -227,7 +225,7 @@ header {
 	label .headerButton {
 		margin-bottom: 1em;
 		display: block;
-		color: $var12;
+		color: $var2;
 		text-decoration: none;
 	}
 	.headerButton {
@@ -244,13 +242,13 @@ header {
 		flex-grow: 1;
 		margin-left: 100px;
 	}
-	
+
 }
 
 .main-slider {
 	height: 570px;
-	border-top: 1px solid $var13;
-	background: linear-gradient(180deg, #F4F7FF 0%, $var22 100%);
+	border-top: 1px solid $var12;
+	background: linear-gradient(180deg, #F4F7FF 0%, #F1F5FF 100%);
 }
 .main-slide {
 	height: 100%;
@@ -279,7 +277,7 @@ header {
 	font-size: 10px;
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
-	color: $var14;
+	color: $var13;
 	margin: 0 0 16px;
 }
 .page-1-str-2 {
@@ -287,7 +285,7 @@ header {
 	font-weight: 300;
 	font-size: 48px;
 	line-height: 60px;
-	color: $var15;
+	color: $var3;
 	margin: 0 0 20px;
 	strong {
 		font-weight: 500;
@@ -307,13 +305,13 @@ i.fas {
 	padding: 0;
 }
 .play_1 {
-	color: $var16;
+	color: $var10;
 }
 .sponsor {
 	height: 145px;
 	background: $var2;
-	border-top: 1px solid $var13;
-	border-bottom: 1px solid $var13;
+	border-top: 1px solid $var12;
+	border-bottom: 1px solid $var12;
 	display: flex;
 	&__content-slide > input {
 		display: none;
@@ -323,10 +321,6 @@ i.fas {
 		justify-content: space-around;
 		align-items: center;
 		min-width: 260px;
-		.sponsor__content-control {
-			position: absolute;
-			top: 100px;
-		}
 	}
 	&__content_slides {
 		display: flex;
@@ -334,77 +328,63 @@ i.fas {
 		flex-grow: 1;
 	}
 }
+
 @media screen and (max-width: 768px) {
-	.sponsor{
-        height: 145px;
-    }
-    
-    .sponsor__content-slide {
-        position: relative;
-              
-    }
-
-    .sponsor__content_slides{
-        position: absolute;
-        top: 50px;
-    }
-
-    .sponsor__content-sliders{
-        height: inherit;
-        opacity: 0;
-        position: absolute;
-        width: inherit;
-        z-index: 0;
-    }
-    .sponsor__content-slide .sponsor__content-control{
-        position: absolute; 
-        
-        top: 100px;
-    }
-    .sponsor__content-slide label{
-        cursor: pointer;
-        display: inline-block;
-        height: 8px;
-        margin: 10px;
-        position: relative;
-        width: 8px;
-        border-radius: 20%;
-    }
-    .sponsor__content-slide label:after{
-        border: 2px solid #5F82FF;
-        content: " ";
-        display: block;
-        height: 16px;
-        left: -4px;
-        position: absolute;
-        top: -4px;
-        width: 16px;
-        border-radius: 20%;
-    }
-
-    #point1:checked ~ .sponsor__content-control label:nth-of-type(1),
-    #point2:checked ~ .sponsor__content-control label:nth-of-type(2),
-    #point3:checked ~ .sponsor__content-control label:nth-of-type(3),
-    #point4:checked ~ .sponsor__content-control label:nth-of-type(4),
-    #point5:checked ~ .sponsor__content-control label:nth-of-type(5){
-        background: #5F82FF;
-    }
-
-    #point1:checked ~ .sponsor__content_slides > #sponsor__content_slide-1,
-    #point2:checked ~ .sponsor__content_slides > #sponsor__content_slide-2,
-    #point3:checked ~ .sponsor__content_slides > #sponsor__content_slide-3,
-    #point4:checked ~ .sponsor__content_slides > #sponsor__content_slide-4,
-    #point5:checked ~ .sponsor__content_slides > #sponsor__content_slide-5 {
-        opacity: 1;
-        z-index: 1;
+	
+	.sponsor {
+		height: 145px;
+		&__content-slide {
+			position: relative;
+			.sponsor__content-control {
+				position: absolute;
+				top: 100px;
+			}
+			label {
+				cursor: pointer;
+				display: inline-block;
+				height: 8px;
+				margin: 10px;
+				position: relative;
+				width: 8px;
+				border-radius: 20%;
+				&:after {
+					border: 2px solid $var14;
+					content: " ";
+					display: block;
+					height: 16px;
+					left: -4px;
+					position: absolute;
+					top: -4px;
+					width: 16px;
+					border-radius: 20%;
+				}
+			}
+		}
+		&__content_slides {
+			position: absolute;
+			top: 50px;
+		}
+		&__content-sliders {
+			height: inherit;
+			opacity: 0;
+			position: absolute;
+			width: inherit;
+			z-index: 0;
+		}
 	}
-	
-	
+	#point1:checked ~ .sponsor__content-control label:nth-of-type(1), #point2:checked ~ .sponsor__content-control label:nth-of-type(2), #point3:checked ~ .sponsor__content-control label:nth-of-type(3), #point4:checked ~ .sponsor__content-control label:nth-of-type(4), #point5:checked ~ .sponsor__content-control label:nth-of-type(5) {
+		background: $var14;
+	}
+	#point1:checked ~ .sponsor__content_slides > #sponsor__content_slide-1, #point2:checked ~ .sponsor__content_slides > #sponsor__content_slide-2, #point3:checked ~ .sponsor__content_slides > #sponsor__content_slide-3, #point4:checked ~ .sponsor__content_slides > #sponsor__content_slide-4, #point5:checked ~ .sponsor__content_slides > #sponsor__content_slide-5 {
+		opacity: 1;
+		z-index: 1;
+	}
+
 }
 
 .planAndManage {
 	height: 776px;
-	background: $var18;
+	background: $var15;
 }
 .plan-and-manage__content {
 	height: 776px;
@@ -433,9 +413,8 @@ i.fas {
 	border-radius: 2px;
 	padding: 13px 25px;
 	color: $var2;
-	background: $var19;
 	display: inline-flex;
-	background: $var19;
+	background: $var16;
 	box-shadow: 0px 5px 15px rgba(188, 199, 255, 0.75);
 	border-radius: 2px;
 }
@@ -448,41 +427,40 @@ i.fas {
 	line-height: 16px;
 	padding: 13px 21px;
 	border-radius: 2px;
-	color: $var20;
+	color: $var17;
 	font-style: normal;
 	align-items: center;
 	text-align: center;
-	background: $var18;
+	background: $var15;
 	display: inline-flex;
-	border: 1px solid $var21;
+	border: 1px solid $var18;
 	box-sizing: border-box;
 }
 .play_2 {
 	color: $var2;
 	padding: 0 6px;
 }
+
 @media screen and (max-width: 768px) {
-	.plan-and-manage__content{
-        flex-direction: column;
-    }
-
-    .page-2-1{
-        margin: 30px 60px;
-    }
-    .group-button{
-        display: flex;
-        justify-content: center;
-    }
-    .page-2-button-1{
-        margin-right: 10px;
-    }
-    .page-1-str-1{
-        text-align: center;
-    }
-
-    .page-1-str-2{
-        text-align: center;
-    }
+	.plan-and-manage__content {
+		flex-direction: column;
+	}
+	.page-2-1 {
+		margin: 30px 60px;
+	}
+	.group-button {
+		display: flex;
+		justify-content: center;
+	}
+	.page-2-button-1 {
+		margin-right: 10px;
+	}
+	.page-1-str-1 {
+		text-align: center;
+	}
+	.page-1-str-2 {
+		text-align: center;
+	}	
 }
 
 @media screen and (max-width: 880px) {
@@ -510,14 +488,11 @@ i.fas {
         margin-right: 0;
     }
 }
-.page-2-button-1 {
-	margin-bottom: 10px;
-	margin-right: 0;
-}
+
 .page__3 {
 	height: 885px;
-	border-top: 1px solid $var13;
-	border-bottom: 1px solid $var13;
+	border-top: 1px solid $var12;
+	border-bottom: 1px solid $var12;
 	&_container {
 		margin-top: 141px;
 		margin-bottom: 171px;
@@ -533,7 +508,7 @@ i.fas {
 	}
 	&-str-1 {
 		margin-top: 30px;
-		color: $var15;
+		color: $var13;
 		font-family: Roboto;
 		font-style: normal;
 		font-weight: 500;
@@ -545,7 +520,7 @@ i.fas {
 	}
 	&-str-2 {
 		margin-top: 20px;
-		color: $var15;
+		color: $var13;
 		font-family: Quicksand;
 		font-style: normal;
 		font-weight: 500;
@@ -573,7 +548,7 @@ i.fas {
 		font-size: 14px;
 		line-height: 25px;
 		text-align: center;
-		color: $var23;
+		color: $var20;
 	}
 	&-text-2 {
 		margin-top: 25px;
@@ -583,7 +558,7 @@ i.fas {
 		font-size: 11px;
 		line-height: 19px;
 		text-align: center;
-		color: $var24;
+		color: $var21;
 	}
 	&-buttons {
 		width: 337px;
@@ -599,61 +574,16 @@ i.fas {
 		font-weight: 600;
 		font-size: 11px;
 		line-height: 19px;
-		color: $var24;
+		color: $var21;
 	}
 	&-slider__wrapper > input {
 		display: none;
-	}
-	&-slider__items {
-		position: absolute;
-		top: 92px;
-	}
-	&-icon {
-		left: -70px;
-	}
-	&-buttons {
-		margin-top: 450px;
-	}
-	&-features {
-		margin-top: unset;
-		display: unset;
-	}
-	&-slider__item {
-		height: 254px;
-		width: 140px;
-		opacity: 0;
-		position: absolute;
-		z-index: 0;
-	}
-	&-slider__wrapper .page__3-control {
-		position: absolute;
-		top: 350px;
-	}
-	&-slider__wrapper label {
-		cursor: pointer;
-		display: inline-block;
-		height: 8px;
-		margin: 10px;
-		position: relative;
-		width: 8px;
-		border-radius: 20%;
-		&:after {
-			border: 2px solid $var17;
-			content: " ";
-			display: block;
-			height: 16px;
-			left: -4px;
-			position: absolute;
-			top: -4px;
-			width: 16px;
-			border-radius: 20%;
-		}
 	}
 }
 #page_3-circle {
 	width: 69px;
 	height: 69px;
-	background: $var22;
+	background: $var19;
 	-moz-border-radius: 50px;
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
@@ -662,10 +592,12 @@ i.fas {
 	justify-content: center;
 }
 #button_red {
-	background: $var25;
-	color: $var26;
+	background: $var22;
+	color: $var23;
 	padding: 16px 22px;
 }
+
+
 @media screen and (max-width: 768px) {
 	.page__3-hyphen{
         display: none;
@@ -689,7 +621,7 @@ i.fas {
 			width: 8px;
 			border-radius: 20%;
 			&:after {
-				border: 2px solid $var1;
+				border: 2px solid $var14;
 				content: " ";
 				display: block;
 				height: 16px;
@@ -723,22 +655,25 @@ i.fas {
 		z-index: 0;
 	}
 	#page__3-point1:checked ~ .page__3-control label:nth-of-type(1), #page__3-point2:checked ~ .page__3-control label:nth-of-type(2), #page__3-point3:checked ~ .page__3-control label:nth-of-type(3), #page__3-point4:checked ~ .page__3-control label:nth-of-type(4) {
-		background: #5F82FF;
+		background: $var14;
 	}
 	#page__3-point1:checked ~ .page__3-slider__items > #page__3-slider__item-1, #page__3-point2:checked ~ .page__3-slider__items > #page__3-slider__item-2, #page__3-point3:checked ~ .page__3-slider__items > #page__3-slider__item-3, #page__3-point4:checked ~ .page__3-slider__items > #page__3-slider__item-4 {
 		opacity: 1;
 		z-index: 1;
 	}
+
 }
+
+
 .page__4 {
 	height: 343px;
-	border-top: 1px solid $var13;
-	border-bottom: 1px solid $var13;
+	border-top: 1px solid $var12;
+	border-bottom: 1px solid $var12;
 	display: flex;
 	justify-content: space-between;
 	&-left {
 		width: 50%;
-		background: linear-gradient(229.32deg, #6888FF 12.77%, $var27 73.11%);
+		background: linear-gradient(229.32deg, #6888FF 12.77%, $var24 73.11%);
 		color: $var2;
 		padding-right: 90px;
 		padding-top: 66px;
@@ -752,7 +687,7 @@ i.fas {
 	&-right {
 		width: 50%;
 		background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
-		color: $var27;
+		color: $var24;
 		padding-left: 90px;
 		padding-top: 66px;
 		padding-bottom: 66px;
@@ -780,8 +715,9 @@ i.fas {
 		line-height: 23px;
 		letter-spacing: 0.03em;
 	}
-	
 }
+
+
 @media screen and (max-width: 768px) {
 	.page__4-right{
         padding-left: 20px;
@@ -794,9 +730,10 @@ i.fas {
         width: unset;
     }
 }
+
 .page__5 {
 	height: 865px;
-	background: $var18;
+	background: $var15;
 	display: flex;
 	&_container {
 		display: flex;
@@ -814,9 +751,9 @@ i.fas {
 		width: 958px;
 		height: 394px;
 		background: $var2;
-		border: 1px solid $var13;
+		border: 1px solid $var12;
 		box-sizing: border-box;
-		box-shadow: 0px 15px 50px $var28;
+		box-shadow: 0px 15px 50px $var25;
 	}
 	&-slide2 {
 		background-color: red;
@@ -825,3 +762,4 @@ i.fas {
 		background-color: green;
 	}
 }
+
