--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -747,7 +747,7 @@ i.fas {
 		margin-top: 92px;
 	}
 	&-slide1 {
-		width: 958px;
+		width: px;
 		height: 394px;
 		background: $var2;
 		border: 1px solid $var12;
